# SBS_SMB

./: .gitmodules  LICENSE  README.md  sbs_bq.c  sbs_bq.h  sbs_smb.c  sbs_smb.cpp  sbs_smb.h  smbus_if.h  smbus_if_avr.cpp
examples/ATMEGA32U4_SBS_SMB/: ATMEGA32U4_SBS_SMB.ino
examples/espidf/sbs_idf/: CMakeLists.txt  sdkconfig
examples/espidf/sbs_idf/main/: CMakeLists.txt  sbs_idf.c
platform/: smbus_avr.c  smbus_espidf.c  smbus_platform.h
