idf_component_register(SRCS "sbs_idf.c" "/media/skuodi/Data/U/BattRig/Development/Hardware/ASSETS/SBS_SMB/platform/smbus_espidf.c" "/media/skuodi/Data/U/BattRig/Development/Hardware/ASSETS/SBS_SMB/sbs_bq.c" "/media/skuodi/Data/U/BattRig/Development/Hardware/ASSETS/SBS_SMB/sbs_smb.c" "/media/skuodi/Data/U/BattRig/Development/Hardware/ASSETS/SBS_SMB/libs/WjCryptLib/lib/WjCryptLib_Sha1.c"
                    INCLUDE_DIRS "." "/media/skuodi/Data/U/BattRig/Development/Hardware/ASSETS/SBS_SMB/" "/media/skuodi/Data/U/BattRig/Development/Hardware/ASSETS/SBS_SMB/platform/" "/media/skuodi/Data/U/BattRig/Development/Hardware/ASSETS/SBS_SMB/libs/WjCryptLib/lib")
